# cwpsa-mcp

./: .dockerignore  .env.example  .gitignore  .py  Dockerfile  README.md  agent_identity_logging.patch  cw_search_rag_tool.patch  pyproject.toml  registry.json  requirements.txt  tier2_convert.patch  tier2_copy.patch
business-knowledge/: index.md
business-knowledge/entities/: contact.md  index.md
business-knowledge/metrics/: active_users.md
docs/: Cwpsa_mcp_rag_search_plan.md  MCP_Server_Architecture.md  OBO_Auth.md
legacy/: Dockerfile  Server.py  business_knowledge.py  openapi-spec-pruned.json  requirements.txt
legacy/business-knowledge/: log.md
legacy/business-knowledge/metrics/: index.md
legacy/business-knowledge/playbooks/: account_manager.md  index.md
scripts/: build_registry.py  test_local.py
src/cwpsa/: __init__.py  __main__.py  config.py  errors.py  links.py  prompts.py  resources.py  server.py
src/cwpsa/auth/: __init__.py  debug.py  entra.py  pep.py
src/cwpsa/cache/: __init__.py  edge_quota.py  idempotency.py  token_broker.py
src/cwpsa/filter/: __init__.py  compiler.py  dsl.py  validator.py
src/cwpsa/integration/: __init__.py  auth.py  client.py  pagination.py  patch_builder.py
src/cwpsa/observability/: __init__.py  audit.py  metrics.py  tracing.py
src/cwpsa/registry/: __init__.py  loader.py  models.py
tests/contract/: test_registry_drift.py
tests/evals/: harness.py
tests/unit/: conftest.py  test_compiler.py  test_follow_href.py  test_patch_builder.py  test_resilience.py  test_search.py  test_validator.py
(+29 files in other folders)
