[project]
name = "cwpsa-mcp"
version = "0.2.0"
description = "ConnectWise PSA MCP server — advanced registry-driven implementation"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "azure-identity>=1.25.2",
    "azure-keyvault-secrets>=4.10.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.0",
    "tenacity>=8.5.0",
    "pybreaker>=1.3.0",
    "anyio>=4.4.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "redis[asyncio]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cwpsa"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
